# purescript-with-warp

./: .gitignore  README.md  purescript-with-warp.cabal  stack.yaml
app/: DevelMain.hs  Main.hs
argonaut/: README.md  argonaut.cabal  stack.yaml
argonaut/src/: Argonaut.hs
argonaut/test/: Main.purs  Spec.hs
purescript-src/: packages.dhall  spago.dhall
purescript-src/src/: Main.purs  Type.purs
purescript-src/test/: Main.purs
src/: Css.hs  Html.hs  IdClass.hs  Lib.hs  Type.hs
test/: Spec.hs
