cabal-version: 1.12

name:           argonaut
version:        0.1.0.1
description:    Generic deriving of argonaut-generic compatible JSON encoding / decoding
homepage:       
bug-reports:    
author:         wkoiking
maintainer:     example@example.com
copyright:      2018 wkoiking
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md

library
  exposed-modules:
      Argonaut
  hs-source-dirs:
      src
  default-extensions:
      StrictData
    , TupleSections
    , LambdaCase
    , MultiWayIf
    , RecordWildCards
    , DerivingStrategies
    , DeriveGeneric
    , DeriveAnyClass
    , GeneralizedNewtypeDeriving
    , BinaryLiterals
  ghc-options: -Wall
  build-depends:
      base >=4.7 && <5
    , aeson
    , bytestring
    , attoparsec
    , unordered-containers
    , vector
    , text
  default-language: Haskell2010

test-suite argonaut-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test
  default-extensions:
      StrictData
    , TupleSections
    , LambdaCase
    , MultiWayIf
    , RecordWildCards
    , DerivingStrategies
    , DeriveGeneric
    , DeriveAnyClass
    , GeneralizedNewtypeDeriving
    , BinaryLiterals
  ghc-options: -threaded -Wall 
  build-depends:
      base >=4.7 && <5
    , argonaut
    , bytestring
    , aeson
    , purescript-bridge
  default-language: Haskell2010
